# event_venue_researcher

./: .env.example  .gitignore  Dockerfile  PLAN.md  pyproject.toml  railway.json
n8n/: event_research_workflow.json
src/event_research/: agent.py  api.py  cli.py  config.py  health_check.py  models.py  notion_lookup.py  notion_sync.py  outreach_agent.py  slack_format.py
src/event_research/templates/: base.py  outreach.py
